<resources>
    <string name="app_name">Scapay</string>
    <string name="textResultDefault">Por favor scaneie um QR code</string>
    <string name="login">Login</string>
    <string name="userName">Email do Usuario</string>
    <string name="passWord">Palavra Passe</string>
    <string name="cadastroVendedor">Quero ser vendedor!</string>
    <string name="cadastroComprador">Quero Comprar!</string>
    <string name="comprador">Cadastre-se como Comprador !</string>
    <string name="nomeExemplo">Seu Francisco</string>
    <string name="sobrenomeExemplo">Silva</string>
    <string name="emailExemplo">seu_francisco@email.com.br</string>
    <string name="dataExemplo">11/09/2001</string>
    <string name="telefoneExemplo">(11)9 1234-56789</string>
    <string name="cpfExemplo">123.456.789-10</string>
    <string name="cartaoCredito">Dados do Cartão de Credito :</string>
    <string name="nomeCartaoCreditoExemplo">Seu Francisco Silva</string>
    <string name="numeroCartaoCreditoExemplo">1234 5678 9123 4567</string>
    <string name="codigoSegurancaExemplo">123</string>
    <string name="primeiroNome">Primeiro Nome: </string>
    <string name="sobrenome">Sobrenome: </string>
    <string name="email">E-Mail: </string>
    <string name="dataNascimento">Data de Nascimento: </string>
    <string name="telefone">Telefone :</string>
    <string name="cPF">CPF: </string>
    <string name="senha">Senha: </string>
    <string name="senhaExemplo">*********************************</string>
    <string name="nomeImpresso">Nome Impresso no Cartão: </string>
    <string name="numeroCartaoCredito">Numero do Cartão de Crédito:  </string>
    <string name="dataVencimento">Data de Vencimento do Cartão: </string>
    <string name="codigoSeguranca">Código de Segurança: </string>
    <string name="cadastrar">Cadastrar !</string>
    <string name="vendedor">Cadastre-se como Vendedor !</string>
    <string name="nomeLojaExemplo">Bar do seu Quincas</string>
    <string name="emailLojaExemplo">bar_quincas@bardoseuquincas.com.br</string>
    <string name="cNPJ">CNPJ: </string>
    <string name="cnpjExemplo">12.345.678/9012-34</string>
    <string name="contaPaypal">Dados da conta Paypal.Me :</string>
    <string name="linkPaypalMe">Link do Paypal.Me: </string>
    <string name="linkPaypalMeExemplo">paypal.me/barDoQuincas</string>
    <string name="linkAjudaPaypalMe">Crie seu Paypal.Me aqui!</string>
    <string name="vendedorPorFavorEscaneie">Por favor scaneie o QRCode de um vendedor</string>
    <string name="nomeLoja">Nome da Loja:</string>
</resources>
