<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.scapegoat.scapay.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:layout_marginTop="10dp"
        android:id="@+id/editUsername"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:hint="@string/passWord"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:id="@+id/tableLayoutTexts"
        android:layout_below="@+id/editPassword"
        android:orientation="horizontal"
        android:weightSum="1">

            <TextView
                android:id="@+id/txtCadastroVendedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_weight="0.5"
                android:onClick="vendedorClickCadastro"
                android:text="@string/cadastroVendedor"/>

            <TextView
                android:id="@+id/txtCadastroComprador"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:onClick="compradorClickCadastro"
                android:text="@string/cadastroComprador"
                android:gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/button"
        android:layout_below="@+id/tableLayoutTexts"
        android:text="@string/login"
        android:onClick="fazerLogin"/>

</RelativeLayout>
